--- a/v1/tsconfig.json
+++ b/v1/tsconfig.json
@@ -5,7 +5,7 @@
     "sourceMap": true,
     "target": "es5",
     "module": "system",
-    "outFile": "js/main.js",
+    "outFile": "js/main.js"
   },
   "compileOnSave": true
 }
