--- a/v1/tsconfig.json
+++ b/v1/tsconfig.json
@@ -7,5 +7,9 @@
     "module": "system",
     "outFile": "js/main.js"
   },
-  "compileOnSave": true
+  "compileOnSave": true,
+  "watchOptions": {
+    "synchronousWatchDirectory": true,
+    "excludeDirectories": ["**/node_modules"]
+  }
 }
